# protoemb

./: .gitignore  LICENSE  Makefile  README.md  deny.toml  pytest.ini  ruff.toml
.github/: dependabot.yml
.github/instructions/: python.instructions.md  rust.instructions.md
.github/workflows/: ci.yml
core/: cargo_build.py  generate.py  pyproject.toml
core/templates/: protocol.c.j2  protocol.h.j2  protocol.rs.j2  protocol.ts.j2  protocol_runtime.c.j2  protocol_runtime.h.j2
docs/: wire-format.md
examples/: README.md  thermostat.yaml  verify.sh
examples/conformance/: dump.c  dump.rs  dump.ts
framing/: Cargo.toml
framing/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: bridge.rs  client.rs  lib.rs  queue.rs  storage.rs  transport.rs  wasm.rs
tests/: .gitignore  BENCHMARKS.md  README.md  conftest.py  protoemb_testkit.py  requirements.txt
tests/conformance/: _harness.py  render.py  test_raw_storage_wire.py  test_search_remap_wire.py  test_thermostat_wire.py
tests/conformance/goldens/: raw_storage.json  search_remap.json  thermostat.json
tests/conformance/schemas/: raw_storage.yaml  search_remap.yaml
tests/generator/: test_enum.py  test_enum_constants.py  test_field_bits.py  test_generation.py  test_messages.py  test_prefix.py  test_raw_storage.py  test_struct_layout.py  test_topo_sort.py  test_union.py  test_validation.py  test_yaml_loader.py
