[package]
name = "protoemb-framing"
version = "0.1.0"
edition = "2021"
description = "ProtoEmb protocol framing layer — shared wire format parser and builder"
license = "MIT"
repository = "https://github.com/your-org/protoemb"
keywords = ["protocol", "embedded", "serial", "framing", "crc"]
categories = ["embedded", "encoding"]
readme = "../README.md"
# Flip to true (and set `repository`) to publish to crates.io.
publish = false
