[package]
name = "protoemb-runtime"
version = "0.1.0"
edition = "2021"
description = "ProtoEmb runtime — generic serial client with priority queue, request/response orchestration, and NDJSON stdio bridge"
publish = false

[dependencies]
protoemb-framing = { path = "../framing" }
serialport = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "protoemb-bridge"
path = "src/bin/protoemb_bridge.rs"
