[package]
name = "protoemb-runtime"
version = "0.1.0"
edition = "2021"
# MSRV, validated empirically (cargo +1.78.0 build + test on both native and
# the dependency tree). Floor is the committed Cargo.lock v4 format (Rust 1.78);
# serde/serialport/wasm-bindgen and the io::Error::other usage all build there.
rust-version = "1.78"
description = "ProtoEmb runtime — generic serial client with priority queue, request/response orchestration, and NDJSON stdio bridge"
license = "MIT"
repository = "https://github.com/RileyMcCarthy/protoemb"
keywords = ["protocol", "embedded", "serial", "client", "wasm"]
categories = ["embedded", "encoding", "wasm"]
readme = "../README.md"
# Flip to true to publish to crates.io.
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
protoemb-framing = { path = "../framing" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# Native-only: real serial port + NDJSON stdio bridge binary.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serialport = "4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# WASM-only: browser bindings. The serial port is owned by JS (Web Serial);
# bytes are fed into / drained from the in-memory transport in `wasm.rs`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
serde_bytes = "0.11"
web-time = "1"
console_error_panic_hook = "0.1"

[[bin]]
name = "protoemb-bridge"
path = "src/bin/protoemb_bridge.rs"
# The bridge binary depends on serialport/stdio; it is not part of the wasm build.
required-features = []
